--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "pg": "^8.16.3"
+    "nodemailer": "^7.0.12",
+    "pg": "^8.16.3",
+    "redis": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
