--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "db:migrate": "npx prisma migrate deploy --schema=./server/prisma/schema.prisma"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.12.0",
     "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^6.19.2",
     "@react-three/fiber": "^9.5.0",
     "@remix-run/router": "^1.23.1",
     "@vitejs/plugin-react": "^5.1.2",
@@ -35,6 +36,7 @@
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "postcss-value-parser": "^4.2.0",
+    "prisma": "^6.19.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-refresh": "^0.18.0",
@@ -59,7 +61,6 @@
     "jiti": "^2.6.1",
     "nodemon": "^3.1.0",
     "postcss": "^8.5.6",
-    "prisma": "^6.19.2",
     "tailwindcss": "^4.1.18"
   }
 }
