--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "firebase": "^12.8.0",
     "fraction.js": "^5.3.4",
     "its-fine": "^2.0.0",
+    "lenis": "^1.3.17",
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.469.0",
     "magic-string": "^0.30.21",
