--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "node server/src/server.js",
+    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
     "build": "npm run build:client",
     "build:client": "cd client && vite build",
     "postinstall": "npx prisma generate --schema=./server/prisma/schema.prisma",
@@ -18,6 +19,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.3",
     "enhanced-resolve": "^5.18.4",
